--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "pug": "^2.0.4",
+    "pug-lint-vue": "^0.3.0",
+    "pug-plain-loader": "^1.0.0"
   },
   "devDependencies": {}
 }
