--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "pug-lint-vue": "^0.3.0",
     "pug-plain-loader": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0"
+  }
 }
